find missing numbers in array

--- a/scenario/missing-number-1.html
+++ b/scenario/missing-number-1.html
@@ -8,7 +8,7 @@
   <body>
     <button onclick="checkDuplicate()">Check Duplicate</button>
     <script>
-      const numbers = [1, 2, 3, 5, 7, 8, 14, 21, 26, 30];
+      const numbers = [1, 2, 2, 3, 5, 7, 8, 14, 21, 26, 30];
 
       function checkDuplicate() {
         let checkBy = 1;
